--- a/action.yaml
+++ b/action.yaml
@@ -18,12 +18,11 @@ runs:
         COMPOSER_HOME: /tmp/.satis-build
       run: |
         mkdir /tmp/.satis-build
+        echo '{"config":{"allow-plugins":{"composer/satis": true}}}" > /tmp/.satis-build/composer.json
 
         composer g require composer/satis:dev-main --prefer-dist \
           --no-cache --no-progress --no-interaction -o \
           --ignore-platform-reqs
-
-        composer global config --no-plugins allow-plugins.composer/satis true
 
         php $COMPOSER_HOME/vendor/bin/satis build ${{ inputs.satis_config }} -n
 
