--- a/action.yaml
+++ b/action.yaml
@@ -18,7 +18,7 @@ runs:
         COMPOSER_HOME: /tmp/.satis-build
       run: |
         mkdir /tmp/.satis-build
-        echo '{"config":{"allow-plugins":{"composer/satis": true}}}" > /tmp/.satis-build/composer.json
+        echo '{"config":{"allow-plugins":{"composer/satis": true}}}' > /tmp/.satis-build/composer.json
 
         composer g require composer/satis:dev-main --prefer-dist \
           --no-cache --no-progress --no-interaction -o \
